src/objects/LeanData__Mass_Convert_Lead__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Mass_Converts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Converted_Status__c</fullName>
        <label>Converted Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Do_Not_Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Mass_Converts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mass_Converts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Mass_Converts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Start_Process_Time__c</fullName>
        <label>Start Process Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mass Convert Lead</label>
    <nameField>
        <label>MassConvert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Convert Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>